--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "appium-android-repository",
   "devDependencies": {
-    "@wdio/appium-service": "^8.27.2",
-    "@wdio/cli": "^8.27.2",
-    "@wdio/local-runner": "^8.27.2",
+    "@wdio/appium-service": "^8.0.9",
+    "@wdio/cli": "^7.16.4",
+    "@wdio/local-runner": "^7.16.4",
     "@wdio/mocha-framework": "^8.27.2",
     "@wdio/spec-reporter": "^8.27.2",
-    "appium": "^2.4.1",
-    "appium-uiautomator2-driver": "^2.42.0",
+    "appium": "^2.3.0",
+    "appium-uiautomator2-driver": "^2.38.0",
     "ts-node": "^10.9.2"
   },
   "scripts": {
     "wdio": "wdio run wdio.conf.js"
   },
   "dependencies": {
+    "braces": "^3.0.3",
     "express": "^4.19.2",
-    "follow-redirects": "^1.15.6"
+    "follow-redirects": "^1.15.6",
+    "ws": "^8.17.1"
   }
 }
