--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "wdio": "wdio run wdio.conf.js"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "braces": "^3.0.3",
     "express": "^4.19.2",
     "follow-redirects": "^1.15.6",
