--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "cookie": "^1.0.2",
     "express": "^4.21.2",
     "follow-redirects": "^1.15.9",
-    "path-to-regexp": "^8.2.0",
+    "path-to-regexp": "^0.1.12",
     "ws": "^8.18.0"
+  },
+  "overrides": {
+    "path-to-regexp": "0.1.12"
   }
 }
