--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "follow-redirects": "^1.15.9",
     "path-to-regexp": "^0.1.12",
+    "tar": "^7.4.3",
     "ws": "^8.18.0"
   }
 }
